persistance des signatures de token dans ParametragesService